--- a/wp-content/themes/understrap-child/sass/theme/partials/base/_container_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/base/_container_styles.scss
@@ -1,9 +1,18 @@
 @media (max-width: 35em){
-.article__wrapper, .navbar>.container, .navbar>.container-fluid{
-	padding-left: 15px;
-	padding-right: 15px;
+.navbar>.container, .navbar>.container-fluid{
+width: 90%;
+ position: relative;
+ margin: 0 auto;
 }
+.container{
+	width: 90%;
+	padding-left: 0;
+	padding-right: 0;
+	max-width: 90%;
 }
+
+}
+
 
 @media (min-width: 35em){
 
@@ -39,8 +48,7 @@
 }   
 @include mq('tablet-wide'){
 	.container{
-width: 99em;
-max-width: 99em;
+
 }
  
 .navbar>.container, .navbar>.container-fluid{
@@ -49,6 +57,8 @@ max-width: 99em;
 }
 }
 @include mq('desktop'){
+width: 99em;
+max-width: 99em;
 /* 	.container{
 width: 48em;
 max-width: 48em;
