--- a/wp-content/themes/understrap-child/sass/theme/partials/layout/article_styles/_home_page_settings.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/layout/article_styles/_home_page_settings.scss
@@ -6,8 +6,10 @@
 	}
     p {
         font-style: italic;
-
+        max-width: 30px;
     }
+
+
     @include mq('phone-wide'){
         .br{
         display: block;
