--- a/wp-content/themes/understrap-child/sass/theme/partials/layout/modules/_my_value_page_header_module.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/layout/modules/_my_value_page_header_module.scss
@@ -1,4 +1,9 @@
+ 
 
+
+
+
+ 
 // .my-value .page__header {
 //     align-items: center;
 
@@ -163,16 +168,16 @@
 
 
 // .scroll-top {
-//     /* Make sure it does not overlap */
+//     Make sure it does not overlap
 //     border: none;
 
-//     /* Remove borders */
+//     Remove borders
 //     outline: none;
 
-//     /* Remove outline */
+//     Remove outline
 //     cursor: pointer;
 
-//     /* Add a mouse pointer on hover */
+//     Add a mouse pointer on hover
 //     background: $tungsten;
 //     padding: .05rem .5rem .25rem .5rem;
 //     border-radius: .25rem;
@@ -180,3 +185,4 @@
 
 
 
+ 
