--- a/wp-content/themes/understrap-child/sass/theme/partials/layout/article_styles/_splash_articles_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/layout/article_styles/_splash_articles_styles.scss
@@ -1,7 +1,10 @@
 #home__splash{
        @include center-middle();
+      padding-left: 0;
+      padding-right: 0;
+    
     h2{
-		@extend %display-text-lg
+		@extend %display-text-lg;
 
 	}
     p {
@@ -13,8 +16,12 @@
 
     } 
 }
-
+ 
 #my-value__splash{
+   h1{ @extend %title;
+    font-style: normal;
+         }
+
    h1, h2{
         @include vr($padding-left: 2);
    }
@@ -34,60 +41,84 @@
 }
 
 #why-me__splash{
-    h3{
+    ul {
+        list-style-type: none;
         margin-bottom: auto;
+        padding-left: 0;
     }
-    .link{
-        bottom: 20rem;
+
+    ul li{
+              @include vr($font-size: 2, $line-height: 4);
+    }   
+
+       .link{
+        bottom: 10rem;
         left: 4rem;
 
     }
-}
+  }
+    
+/* ol li:nth-child(4){
+      list-style-type: none;
+      margin-left: -2rem;
+      @extend %body-text;
+      @include vr($font-size: 1, $line-height: 4);
+      &:before{
+        content: '(bonus)';
+        line-height: inherit;
+  } */
+
+    
+
+
+ 
+
 
 #my-expertise__splash{
         @include center-middle();
-       h2{
+       height:  100vh;
+       h3{
         margin-bottom: auto;
     }
 }
 
 
-// @extend %center-center;
+/* @extend %center-center; */
+
+
+
+
+
+/* 
+/////////////////////////////////////////////
+
+@mixin two-rows(){
+.conbox{
+    @extend %row;
+    @extend %center-top;
+
+.content1, .content2{
+    @include make-col-ready();
+    @include make-col(6);
+}
+}
+}
 
 
 
 
 
 
-///////////////////////////////////////////////
 
-// @mixin two-rows(){
-// .conbox{
-//     @extend %row;
-//     @extend %center-top;
+.whatiam{
+   @include queue();
+       @include center-center()
+   @media (min-width: 90em){
+        @include stack();
 
-// .content1, .content2{
-//     @include make-col-ready();
-//     @include make-col(6);
-// }
-// }
-// }
-
-
-
-
-
-
-
-// .whatiam{
-//    @include queue();
-//        @include center-center()
-//    @media (min-width: 90em){
-//         @include stack();
-
-// }
-// }
-
+}
+}
+ */
 
 
 
