--- a/wp-content/themes/understrap-child/sass/theme/partials/mixins/_flexbox_mixins.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/mixins/_flexbox_mixins.scss
@@ -58,13 +58,15 @@ flex-direction: column;
 
 
 @mixin split-cols(){
-@include cols();
+@include rows();
 @include make-row();
+
 .content1, .content2{
     @include make-col-ready();
     @include make-col(6);
 }
 }
+
 
 @mixin split-rows(){
 @include rows();
@@ -155,14 +157,12 @@ text-align: left;
 
 
 @mixin push-middle(){
-padding: 25rem 0;
+
 @include mq('tablet-wide'){
-	padding-top: 0rem;
-	padding-bottom: 30rem;
+
 }
 @include mq('desktop'){
-	padding-top: 30rem;
-	padding-bottom: 30rem;
+
 }
 }
 
