--- a/wp-content/themes/understrap-child/sass/theme/partials/utilities/_display_state_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/utilities/_display_state_styles.scss
@@ -20,7 +20,7 @@
 
 @media (min-width: 14em) {
 .page__header h3{.br{display: block;}}
-.my-value__container__modernize h3, .my-value__container__optimize h3, {.br{display: none;}}
+.my-value__container__modernize h3 {.br{display: none;}}
 }
 @media (min-width: 19em) {.my-value__container__optimize h3{.br__opt{display: block;}}
 }
@@ -45,24 +45,34 @@ display: none;
 
 
 
+.nope {
+    position: absolute;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+}
 
+[aria-hidden="true"] {
+    display: none;
+}
 
-#profile-small{
- 		display: block;
- 	}
+[aria-hidden="false"] {
+    display: block;
+}
 
 
 #home__splash p{
 	.br{
 		display: block;
 	}
+	
 }
 
 
 
-// .scroll-top {
+/* // .scroll-top {
 //     display: none;
-// }
+// } */
 
 .panel.business-value.grow > div > hgroup > h3 > br,
 .panel.business-value.modernize > div > hgroup > h3 > br{
@@ -102,19 +112,19 @@ display: none;
 	   }
 
 
-// 	    @include media-breakpoint-up(sm) {
-// 	    	display: none;
-// 	}
-// 	    @include media-breakpoint-up(md) {
-// 	  	display: none;
-// 	  }
-// 	    @include media-breakpoint-up(lg) {
-// 			display: block;
-// 		}
-// 	    @include media-breakpoint-up(xl) {
-// 	}
+/* 	    @include media-breakpoint-up(sm) {
+	display: none;
+	}
+@include media-breakpoint-up(md) {
+	  	display: none;
+	  }
+@include media-breakpoint-up(lg) {
+			display: block;
+		}
+@include media-breakpoint-up(xl) {
+	}
 	
-// }
+} */
 
 .diagram-content__end-to-end--vertical{
 	 display: flex;
@@ -145,15 +155,78 @@ display: none;
 	 
 	 @media (min-width: 1900px) {}
 }	 
-	//     @include media-breakpoint-up(sm) {
-	    	
-	// }
-	//     @include media-breakpoint-up(md) {
-	// }    
-	//     @include media-breakpoint-up(lg) {
-	// 		display: none;
-	// 	}
-	//     @include media-breakpoint-up(xl) {
-	// }
+/* 	    @include media-breakpoint-up(sm) {
+	
+	}
+@include media-breakpoint-up(md) {
+	}    
+@include media-breakpoint-up(lg) {
+			display: none;
+		}
+@include media-breakpoint-up(xl) {
+	} */
 	
 
+.hvr-underline-from-center {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  position: relative;
+  overflow: hidden;
+}
+.hvr-underline-from-center:before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  left: 51%;
+  right: 51%;
+  bottom: 0;
+  background: $tungsten;
+  height: 1px;
+  -webkit-transition-property: left, right;
+  transition-property: left, right;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-timing-function: ease-out;
+  transition-timing-function: ease-out;
+}
+.hvr-underline-from-center:hover:before, .hvr-underline-from-center:focus:before, .hvr-underline-from-center:active:before {
+  left: 0;
+  right: 0;
+}
+
+/* Sweep To Top */
+.sweep-to-top {
+	@include hacks();
+	position: relative;
+	@include prefixed(transition-property, color);
+	@include prefixed(transition-duration, $mediumDuration);
+
+	&:before {
+		content: "";
+		position: absolute;
+		z-index: -1;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		background: $activeColor;
+		@include prefixed(transform, scaleY(0));
+		@include prefixed(transform-origin, 50% 100%);
+		@include prefixed(transition-property, transform);
+		@include prefixed(transition-duration, $mediumDuration);
+		@include prefixed(transition-timing-function, ease-out);
+	}
+
+	&:hover,
+	&:focus,
+	&:active {
+		color: white;
+
+		&:before {
+			@include prefixed(transform, scaleY(1));
+		}
+	}
+}
